--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="color-scheme" content="dark">
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+            name="description"
+            content="Web site created using create-react-app"
     />
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Dota2WardMap</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<!--    <title>Dota2WardMap - {title from backend}</title>-->
+    <script>
+        var leagues = [{
+            id: 15909,
+            name: "ESL One Kuala Lumpur Qualifiers",
+            version: 0
+        }, {
+            id: 15728,
+            name: "The International 2023",
+            version: 0
+        }]
+    </script>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+</body>
 </html>
