--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,8 @@
     />
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Dota2WardMap</title>
-<!--    <title>Dota2WardMap - {title from backend}</title>-->
     <script>
-        var leagues = [{
+        leagues = [{
             id: 15909,
             name: "ESL One Kuala Lumpur Qualifiers",
             version: 0
