--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
             name="description"
             content="234"
     />
-    <link rel="icon" type="image/x-icon" href="./static/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Dota2WardMap</title>
     <script>
         leagues = [{
