--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
             name="description"
             content="234"
     />
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Dota2WardMap</title>
+    <link rel="icon" type="image/x-icon" href="/wardmap/favicon.ico">
+    <title>WardMap</title>
     <script>
         leagues = [{
             id: 16669,
