--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,13 @@
     <link rel="icon" type="image/x-icon" href="/wardmap/favicon.ico">
     <title>WardMap</title>
     <script>
-        leagues = [{
+    leagues = [
+        {
+            id: 16839,
+            name: "Road To The International 2024 EEU",
+            version: 1
+        },
+        {
             id: 16669,
             name: "PGL Wallachia 2024 Season 1",
             version: 1
@@ -19,7 +25,7 @@
             id: 16518,
             name: "ESL One Birmingham 2024",
             version: 1
-        },{
+        }, {
             id: 16483,
             name: "Elite League",
             version: 1
