Add Riyadh Masters 2024 Play-in

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
     <script>
     leagues = [
         {
+            id: 16881,
+            name: "Riyadh Masters 2024 Play-in",
+            version: 1
+        },
+        {
             id: 16839,
             name: "Road To The International 2024 EEU",
             version: 1
