Add Riyadh Masters 2024

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     leagues = [
         {
             id: 16881,
-            name: "Riyadh Masters 2024 Play-in",
+            name: "Riyadh Masters 2024",
             version: 1
         },
         {
